@@ -187,6 +187,8 @@
 }{}
 \hypersetup{
   pdftitle={reStructuredText Test Document},
+  pdfkeywords={reStructuredText, test, parser},
+  pdfinfo={description={A test document, containing at least one example of each reStructuredText construct.}},
   pdfauthor={David Goodger;Me;Myself;I}
 }
 
